<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_gravity="center"
            android:text="@string/label_main_title"
            android:textAlignment="center"
            android:textSize="@dimen/textSizeScore" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/tennisracket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/title"
                        android:layout_marginRight="@dimen/smallMargin"
                        android:text="@string/player1_name"
                        android:textSize="@dimen/textSizeMedium" />

                    <EditText
                        android:id="@+id/edt_player1"
                        style="@style/edit_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/title"
                        android:layout_marginRight="@dimen/smallMargin"
                        android:text="@string/player2_name"
                        android:textSize="@dimen/textSizeMedium" />

                    <EditText
                        android:id="@+id/edt_player2"
                        style="@style/edit_text" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                style="@style/title"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/bigMargin"
                android:text="@string/lbl_serve"
                android:textSize="@dimen/textSizeMedium" />
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_serve_pl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <RadioButton
                    android:id="@+id/radio_button_serve_pl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/smallMargin"
                    android:layout_gravity="right" />

            </RadioGroup>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/title"
                android:text="@string/lbl_3sets"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSizeMedium" />

            <RadioButton
                android:id="@+id/radio_button_3sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/smallPadding" />

            <TextView
                style="@style/title"
                android:text="@string/lbl_5sets"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSizeMedium" />

            <RadioButton
                android:id="@+id/radio_button_5sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/smallPadding" />
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/title"
                android:text="@string/lbl_tie_break_last_set"
                android:textSize="@dimen/textSizeMedium"
                android:layout_marginRight="@dimen/smallMargin"/>
            <TextView
                style="@style/title"
                android:text="@string/yes"
                android:textSize="@dimen/textSizeMedium" />

            <RadioButton
                android:id="@+id/tieBreakYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/smallPadding" />
            <TextView
                style="@style/title"
                android:text="@string/no"
                android:textSize="@dimen/textSizeMedium" />

            <RadioButton
                android:id="@+id/tieBreakNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/smallPadding" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_go_to_match"
            style="@style/resetButton"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/smallball"
            android:text="@string/btn_enter_button" />
    </LinearLayout>

    </ScrollView>