<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/fieldopenair"
    android:orientation="vertical"
    android:paddingTop="@dimen/bigMargin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/smallMargin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1_stats"
                style="@style/PlText"
                android:text="@string/player1_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/points_won_txt" />

                <TextView
                    android:id="@+id/txt_points_player1"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/ace_txt" />

                <TextView
                    android:id="@+id/txt_aces_player1"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/winner_txt" />

                <TextView
                    android:id="@+id/txt_winners_player1"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/error_txt" />

                <TextView
                    android:id="@+id/txt_errors_player1"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/smallMargin"
            android:background="@android:color/holo_orange_light" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2_stats"
                style="@style/PlText"
                android:text="@string/player2_name" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/points_won_txt" />

                <TextView
                    android:id="@+id/txt_points_player2"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/ace_txt" />

                <TextView
                    android:id="@+id/txt_aces_player2"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/winner_txt" />

                <TextView
                    android:id="@+id/txt_winners_player2"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PlText"
                    android:text="@string/error_txt" />

                <TextView
                    android:id="@+id/txt_errors_player2"
                    style="@style/SetScoreText"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:orientation="vertical">

        <TextView
            style="@style/PlText"
            android:layout_gravity="center"
            android:text="@string/txt_back_to_match"
            android:textColor="@color/backgroundColor" />

        <Button
            android:id="@+id/btn_go_to_main_menu"
            style="@style/button"
            android:background="@drawable/tennisball"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/main_menu_button" />
    </LinearLayout>
</LinearLayout>